// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-order-bump renders custom label 1`] = `
<sc-order-bumps>
  <mock:shadow-root>
    <sc-form-control label="custom">
      <div aria-label="Order bump summary" class="bumps__list">
        <sc-order-bump exportparts="choice__base, choice__content, base-content, image, text, title, cta, amount, price, tag, description, button, base, control, checked-icon"></sc-order-bump>
      </div>
    </sc-form-control>
  </mock:shadow-root>
</sc-order-bumps>
`;

exports[`sc-order-bump renders default label 1`] = `
<sc-order-bumps>
  <mock:shadow-root>
    <sc-form-control label="Recommended">
      <div aria-label="Order bump summary" class="bumps__list">
        <sc-order-bump exportparts="choice__base, choice__content, base-content, image, text, title, cta, amount, price, tag, description, button, base, control, checked-icon"></sc-order-bump>
      </div>
    </sc-form-control>
  </mock:shadow-root>
</sc-order-bumps>
`;

exports[`sc-order-bump renders empty if no bumps 1`] = `
<sc-order-bumps>
  <mock:shadow-root></mock:shadow-root>
</sc-order-bumps>
`;
